@@ -1,3 +1,4 @@
+	* raise the default number of torrents allowed to announce to trackers to 1600
 	* improve uTP slow start behavior
 	* fixed UDP socket error causing it to fail on Win7
 	* update use of boost.system to not use deprecated functions
